libs/pavex_cli/tests/ui_tests/singletons_must_be_clonable/expectations/stderr.txt
Error: 
  × `app::NonCloneSingleton` does not implement the `core::clone::Clone`
  │ trait.
    ╭─[src/lib.rs:11:1]
 11 │ pub fn blueprint() -> AppBlueprint {
 12 │     AppBlueprint::new().constructor(f!(crate::NonCloneSingleton::new), Lifecycle::Singleton)
    ·                                     ────────────────┬────────────────
    ·                                                     ╰── The constructor was registered here
 13 │ }
    ╰────
  help: All singletons must implement the `Send`, `Sync` and `Clone` traits.
         `pavex` runs on a multi-threaded HTTP server and singletons must be
        shared across all worker threads.